musicpost削除機能の実装

--- a/app/views/shared/_musicposts_index.html.erb
+++ b/app/views/shared/_musicposts_index.html.erb
@@ -3,6 +3,7 @@
     <div class="row  musicpost">
       <div class="col-md-5 musicpost_information">
         <p class="title"><%= link_to musicpost.title, musicpost %></p>
+        <%= render 'shared/trash_musicpost', musicpost: musicpost %>
         <% unless user_page %>
           <p class="name">投稿者：<%= link_to musicpost.user.name, musicpost.user %></p>
         <% end %>
