--- a/app/views/layouts/_musicpost_tab.html.erb
+++ b/app/views/layouts/_musicpost_tab.html.erb
@@ -16,6 +16,7 @@
   </div>
   <div class="col-md-9 musicpost_detail_right">
     <h1><%= musicpost.title %></h1>
+    <%= render 'shared/trash_musicpost', musicpost: musicpost %>
     <ul>
       <li><%= "作曲家： #{composer.name}" if composer %></li>
       <li><%= "演奏楽器： #{instrument.name}" if instrument %></li>
