likeボタンの変更

--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -258,7 +258,7 @@ footer{
 .musicpost_button{
   ul{
     display: flex;
-    font-size: 40px;
+    font-size: 30px;
     color: #7B449A;
     cursor: pointer;
     list-style: none;
@@ -269,7 +269,7 @@ footer{
         display: none;
       }
       .favorite{
-        color: #7B449A;
+        color: #ED4956;
       }
       .unfavorite{
         color: #CCCCCC;
