--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,12 @@
 <div class="row">
-  <div class="col-md-12 user_information">
+  <div class="col-md-9 user_information">
     <%= image_tag(@user.display_avatar, class:"img_avatar") %>
     <div class="user_text">
       <h3><%= @user.name %></h3>
       <p><%= @user.self_introduction %></p>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-12 link">
+  <div class="col-md-3 user_button">
     <% if @user == current_user %>
       <button type="button" class="user_edit_btn btn btn-primary" data-toggle="modal" data-target="#user_edit">
         ユーザー情報編集
@@ -21,11 +19,18 @@
     <% end %>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-12 user_tab tab">
+    <ul>
+      <li class="upload_list active"><%= link_to "投稿一覧", '' %></li>
+    </ul>
+  </div>
+</div>
 <div class="row user_main">
-  <div class="col-md-8">
+  <div class="col-md-9">
     <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: true %>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <%= render 'shared/stats', user: @user %>
   </div>
 </div>
