ユーザーページのお気に入り、コメントページ作成

--- a/app/views/layouts/_user_tab.html.erb
+++ b/app/views/layouts/_user_tab.html.erb
@@ -7,10 +7,10 @@
 <div class="row">
   <div class="col-md-12 user_tab tab">
     <ul>
-      <li class="likes_list">Likes</li>
-      <li class="following_list"><%= link_to "Following", following_user_path %></li>
-      <li class="followers_list"><%= link_to "Followers", followers_user_path %></li>
-      <li class="comments_list">Comments</li>
+      <li class="favorites_list"><%= link_to "お気に入り", favorites_user_path %></li>
+      <li class="following_list"><%= link_to "フォロー", following_user_path %></li>
+      <li class="followers_list"><%= link_to "フォロワー", followers_user_path %></li>
+      <li class="comments_list"><%= link_to"コメント", comments_user_path %></li>
     </ul>
   </div>
 </div>
