--- a/app/views/musicposts/show.html.erb
+++ b/app/views/musicposts/show.html.erb
@@ -8,33 +8,6 @@
         <%= f.submit "コメント", class: "btn btn-primary" %>
       <% end %>
     </div>
-    <div class="comment_index">
-      <% @comments.each do |comment| %>
-        <div class="row comment">
-          <div class="col-md-1">
-            <%= image_tag(comment.user.display_avatar, class:"img_avatar") %>
-          </div>
-          <div class="col-md-11">
-            <div class="comment_header">
-              <ul>
-                <li><%= link_to comment.user.name, comment.user %></li>
-                <li><%= time_ago_in_words(comment.created_at) %>前</li>
-                <li>
-                  <% if comment.user == current_user %>
-                    <%= form_with(model: @comment, url: comment_path, method: :delete, local:true) do |f| %>
-                      <%= hidden_field_tag :comment_id, comment.id %>
-                      <%= f.button type: "submit", id: "trash_comment" do %>
-                        <i class="fas fa-trash"></i>
-                      <% end %>
-                    <% end %>
-                  <% end %>
-                </li>
-              </ul>
-            </div>
-            <p class="content"><%= comment.content %></p>
-          </div>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'shared/comments_index', comments: @comments, user_name: true %>
   </div>
 </div>
