--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,12 +1,12 @@
 <div class="stats">
   <a href="<%= following_user_path(user) %>">
-    following
+    フォロー
     <strong id="following" class="stat">
       <%= user.following.count %>
     </strong>
   </a>
   <a href="<%= followers_user_path(user) %>">
-    followers
+    フォロワー
     <strong id="followers" class="stat">
       <%= user.followers.count %>
     </strong>
