ユーザーページのページネイト

--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -1,2 +1,3 @@
 <%= render 'layouts/user_tab', user: @user %>
 <%= render 'shared/comments_index', comments: @comments, user_name: false %>
+<%= paginate @comments %>
