library/following の実装

--- a/app/views/layouts/_library_tab.html.erb
+++ b/app/views/layouts/_library_tab.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-12 library_tab tab">
     <ul>
-      <li class="favorites_list"><%= link_to "Favorite", favorites_path %></li>
-      <li class="following_list"><%= link_to "Following", '' %></li>
-      <li class="followers_list"><%= link_to "History", '' %></li>
+      <li class="favorites_list"><%= link_to "お気に入り", favorites_library_path %></li>
+      <li class="following_list"><%= link_to "フォロー中", following_library_path %></li>
+      <li class="followers_list"><%= link_to "視聴履歴", '' %></li>
     </ul>
   </div>
 </div>
