--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <ul class = "navbar-nav ml-auto">
           <% if user_signed_in? %>
             <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link" %></li>
-            <li class="nav-item"><%= link_to "Library", favorites_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to "Library", favorites_library_path(current_user), class: "nav-link" %></li>
             <%= search_form_for @q, url: search_path do |f| %>
               <form class="form-inline">
                 <%= f.search_field :title_or_overview_or_user_name_or_taxons_name_or_comments_content_or_memos_memo_cont, placeholder: 'Search', id: "search" %>
