--- a/app/views/libraries/favorites.html.erb
+++ b/app/views/libraries/favorites.html.erb
@@ -1,2 +1,3 @@
 <%= render 'layouts/library_tab' %>
 <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
+<%= paginate @musicposts %>
