--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,7 +1,9 @@
 <div id="follow_form">
-  <% if current_user.following?(user) %>
-    <%= render 'users/unfollow', user: user %>
-  <% else %>
-    <%= render 'users/follow', user: user %>
+  <% if user_signed_in? %>
+    <% if current_user.following?(user) %>
+      <%= render 'users/unfollow', user: user %>
+    <% else %>
+      <%= render 'users/follow', user: user %>
+    <% end %>
   <% end %>
 </div>
