--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -65,6 +65,16 @@ button{
   border-radius: 50%;
 }
 
+.no-gutters {
+  margin-right: -5px;
+  margin-left: -5px;
+}
+.no-gutters > .col,
+.no-gutters > [class*="col-"] {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 /*=== 1.COMMON ===*/
 .container {
   width: 100%;
@@ -89,6 +99,30 @@ button{
     width: 1170px;
   }
 }
+@media (max-width: 768px) {
+  footer{
+    display: none;
+  }
+  .library_tab{
+    ul{
+      li{
+        a{
+          font-size: 18px;
+        }
+      }
+    }
+  }
+  .user_tab{
+    ul{
+      li{
+        a{
+          font-size: 8px;
+        }
+      }
+    }
+  }
+}
+
 
 /*=== 2.HEADER ===*/
 header{
@@ -129,6 +163,7 @@ header{
 }
 input, textarea, select{
   width: 500px;
+  max-width: 100%;
   padding: 5px;
   margin-bottom: 15px;
 }
@@ -179,6 +214,7 @@ footer{
 }
 .audiojs{
   height: 100%;
+  max-width: 100%;
   background: none;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -248,8 +284,17 @@ footer{
   justify-content: space-around;
   .musicpost_container{
     margin: 15px;
-    img{
-      width: 100%;
+    .avatar{
+      height: auto;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 5px;
+      img{
+        display: inline-block;
+        width: 100%;
+        align-self: flex-start;
+        max-width: 200px;
+      }
     }
     .title_field{
       display: flex;
@@ -336,8 +381,6 @@ footer{
   }
 }
 .user_button{
-  display: flex;
-  justify-content: flex-end;
   height: 80px
 }
 .tab{
@@ -393,18 +436,16 @@ footer{
     margin: 2px auto;
   }
 }
-
-/*=== 8.stats ===*/
 .stats{
   overflow: auto;
-  margin-top: 0;
+  margin: 0 0 0 10px;
   padding: 0;
   a {
     float: left;
     padding: 0 10px;
     border-left: 1px solid #CECECE;
     color: #999999;
-    width: 50%;
+    // width: 50%;
     text-align: center;
     &:first-child {
       border: 0;
@@ -419,7 +460,7 @@ footer{
   }
 }
 
-/*=== 9.musicpost_detail ===*/
+/*=== 8.musicpost_detail ===*/
 .musicpost_detail_left{
   text-align: center;
   img{
@@ -460,7 +501,7 @@ footer{
   }
 }
 
-/*=== 10.comments_index ===*/
+/*=== 9.comments_index ===*/
 .comment_create{
   form{
     width: 100%;
@@ -478,7 +519,8 @@ footer{
   margin-bottom: 5px;
   padding: 5px;
   .img_avatar{
-    height: 70px
+    width: 100%;
+    max-width: 70px;
   }
   .comment_header{
     color: #9C9C9C;
@@ -497,7 +539,7 @@ footer{
   }
 }
 
-/*=== 11.memo ===*/
+/*=== 10.memo ===*/
 .memo_field{
   textarea{
     width: 100%;
@@ -512,7 +554,7 @@ footer{
   }
 }
 
-/*=== 12.Load ===*/
+/*=== 11.Load ===*/
 .now_loading{
   width: 100%;
   height: 100%;
@@ -537,7 +579,7 @@ footer{
   }
 }
 
-/*=== 13.Pagination ===*/
+/*=== 12.Pagination ===*/
 .pagination{
   margin: 15px 15px;
   li{
