--- a/app/views/layouts/_user_relationship.html.erb
+++ b/app/views/layouts/_user_relationship.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <% users.each do |user| %>
-    <div class="col-md-2 user_relationship">
+    <div class="col-6 col-md-2 user_relationship">
       <%= link_to user_path(user) do %>
         <%= image_tag(user.display_avatar, class:"img_avatar") %>
         <p><%= user.name %></p>
