タイトルが動的に変化するように修正

--- a/app/views/libraries/favorites.html.erb
+++ b/app/views/libraries/favorites.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'お気に入りした投稿') %>
 <%= render 'layouts/library_tab' %>
 <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
 <%= paginate @musicposts %>
