--- a/app/views/libraries/following.html.erb
+++ b/app/views/libraries/following.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'フォローしているアカウントからの投稿') %>
 <%= render 'layouts/library_tab' %>
 <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
 <%= paginate @musicposts %>
