--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @user.name) %>
 <%= render 'layouts/user_tab', user: @user %>
 <div class="row user_main">
   <div class="col-md-12">
