--- a/app/views/memos/edit.html.erb
+++ b/app/views/memos/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@musicpost.title}のメモ") %>
 <%= render 'layouts/musicpost_tab', musicpost: @musicpost, composer: @composer, instrument: @instrument %>
 <div class="row">
   <div class="col-md-12 memo_field">
