--- a/app/views/musicposts/show.html.erb
+++ b/app/views/musicposts/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @musicpost.title) %>
 <%= render 'layouts/musicpost_tab', musicpost: @musicpost, composer: @composer, instrument: @instrument %>
 <div class="row">
   <div class="col-md-12">
