--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "検索結果 #{@search_word}") %>
 <h2>検索結果</h2>
 <p>検索条件：<%= @search_word %></p>
 <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
