--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@user.name}のお気に入り") %>
 <%= render 'layouts/user_tab', user: @user %>
 <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
 <%= paginate @musicposts %>
