--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,2 +1,3 @@
+<% provide(:title, "#{@user.name}がフォローしているアカウント") %>
 <%= render 'layouts/user_tab', user: @user %>
 <%= render 'layouts/user_relationship', users: @users %>
