--- a/app/views/users/registrations/edit_password.html.erb
+++ b/app/views/users/registrations/edit_password.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "パスワード変更") %>
 <div class = "col-md-6 col-md-offset-3">
   <h2>パスワード変更</h2>
   <%= form_with model: @user, url: users_edit_password_path, local: true do |f| %>
@@ -13,7 +14,7 @@
     <div class="field">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>    
+    </div>
     <div class="actions">
       <%= f.submit "変更" %>
     </div>
