--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><%= full_title(yield(:title)) %></title>
+  <title><%= full_title(page_title: yield(:title)) %></title>
   <%= csrf_meta_tags %>
   <%= javascript_include_tag 'application' %>
   <!-- PLUGINS CSS STYLE -->
