--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -316,6 +316,9 @@ footer{
   color: #7B449A;
   cursor: pointer;
   list-style: none;
+  button{
+    color: #7B449A;
+  }
   .select_musicpost_pause{
     display: none;
   }
