--- a/app/views/shared/_play_pause.html.erb
+++ b/app/views/shared/_play_pause.html.erb
@@ -1,9 +1,14 @@
 <div class="play_pause_button", id="play_pause_button_<%= musicpost.id %>">
   <div class="select_musicpost_play">
-    <i class="fas fa-play-circle"></i>
-    <input class="src" type="hidden", value="<%= url_for(musicpost.audio) %>">
-    <input class="title" type="hidden", value="<%= musicpost.title %>">
-    <input class="upload_user" type="hidden", value="<%= musicpost.user.name %>">
+    <%= form_with(url: histories_path, remote: true) do |f| %>
+      <%= hidden_field_tag :musicpost_id, musicpost.id %>
+      <%= hidden_field_tag :src, url_for(musicpost.audio), class: "src" %>
+      <%= hidden_field_tag :title, musicpost.title, class: "title" %>
+      <%= hidden_field_tag :upload_user, musicpost.user.name, class: "upload_user" %>
+      <%= f.button type: "submit" do %>
+        <i class="fas fa-play-circle"></i>
+      <% end %>
+    <% end %>
   </div>
   <div class="select_musicpost_pause">
     <i class="fas fa-pause-circle"></i>
