--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,6 +31,7 @@
             <%= render 'shared/search'%>
             <li class="nav-item"><%= link_to "新規登録", new_user_registration_path, class: "nav-link" %></li>
             <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to "かんたんログイン", users_easy_login_path, method: :post, class: "nav-link" %></li>
           <% end %>
         </ul>
       </div>
