--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 
 body {
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: #252525;
@@ -139,6 +139,7 @@ header{
         width: 50px;
       }
       input{
+        width: 500px;
         margin: 0 8px;
       }
       ul{
@@ -151,6 +152,11 @@ header{
 }
 
 /*=== 3.FORM ===*/
+.form{
+  .btn{
+    width: 100%;
+  }
+}
 .field{
   display: flex;
   flex-flow: column;
@@ -162,7 +168,6 @@ header{
   }
 }
 input, textarea, select{
-  width: 500px;
   max-width: 100%;
   padding: 5px;
   margin-bottom: 15px;
