--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, '新規登録') %>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div class="row form">
+  <div class="col-md-6 mx-auto">
     <h2>新規会員登録</h2>
     <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
@@ -14,9 +14,6 @@
       </div>
       <div class="field">
         <%= f.label :password %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> 文字以上)</em>
-        <% end %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
       <div class="field">
@@ -27,7 +24,7 @@
         <%= f.submit "登録", class: "user_edit_btn btn btn-primary" %>
       </div>
     <% end %>
-    <%= button_to 'ゲストユーザーでログイン', users_easy_login_path, class: "btn btn-primary" %>
+    <%= button_to 'ゲストユーザーでログイン', users_easy_login_path, class: "btn btn-primary mt-0" %>
     <p><%= render "devise/shared/links" %></p>
   </div>
 </div>
