--- a/app/views/upload_musicposts/new.html.erb
+++ b/app/views/upload_musicposts/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, '投稿') %>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h1>アップロード</h1>
+<div class="row form">
+  <div class="col-md-6 mx-auto">
+    <h2>アップロード</h2>
     <p>あなたの演奏を配信しましょう</p>
     <%= form_with model: @upload_musicpost, url: upload_musicposts_path, local: true do |f| %>
       <div class="error_messages">
