--- a/app/views/users/registrations/edit_password.html.erb
+++ b/app/views/users/registrations/edit_password.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "パスワード変更") %>
-<div class = "col-md-6 col-md-offset-3">
+<div class = "col-md-6 mx-auto form">
   <h2>パスワード変更</h2>
   <%= form_with model: @user, url: users_edit_password_path, local: true do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -16,7 +16,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
     <div class="actions">
-      <%= f.submit "変更" %>
+      <%= f.submit "変更", class: "btn btn-primary" %>
     </div>
   <% end %>
   <%= link_to "戻る", :back %>
