会員登録後サービス概要のパーシャル化

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,4 +27,5 @@
     <%= button_to 'ゲストユーザーでログイン', users_easy_login_path, class: "btn btn-primary mt-0" %>
     <p><%= render "devise/shared/links" %></p>
   </div>
+  <%= render 'static_pages/service' %>
 </div>
