--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -639,34 +639,35 @@ footer{
       }
     }
   }
-  .service{
-    background-color: #F2F2F2;
-    padding: 30px;
-    h2{
+}
+.service{
+  background-color: #F2F2F2;
+  padding: 30px;
+  margin-top: 30px;
+  h2{
+    text-align: center;
+  }
+  ul{
+    list-style: none;
+    padding: 0;
+    li{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
-    }
-    ul{
-      list-style: none;
-      padding: 0;
-      li{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin: 15px;
-        .title{
-          font-weight: bold;
-          font-size: 16px;
-          margin-bottom: 5px;
-        }
-        i{
-          font-size: 30px;
-          color: white;
-          background-color: #7B449A;
-          border-radius: 50%;
-          padding: 15px;
-          margin-bottom: 10px;
-        }
+      margin: 15px;
+      .title{
+        font-weight: bold;
+        font-size: 16px;
+        margin-bottom: 5px;
+      }
+      i{
+        font-size: 30px;
+        color: white;
+        background-color: #7B449A;
+        border-radius: 50%;
+        padding: 15px;
+        margin-bottom: 10px;
       }
     }
   }
