通知ページの作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
             <%= render 'shared/search'%>
             <li class="nav-item"><%= link_to "Upload", new_upload_musicpost_path, class: "nav-link" %></li>
             <li class="nav-item">
-              <%= link_to '', class: "nav-link" do %>
+              <%= link_to notifications_path, class: "nav-link" do %>
                 <i class="fas fa-bell fa-lg"></i>
               <% end %>
             </li>
