新着通知がある時にアニメーションをつける

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -9,4 +9,5 @@
   <!-- PLUGINS CSS STYLE -->
   <%= stylesheet_link_tag "application", :media => "all" %>
   <script src="https://kit.fontawesome.com/b5024f8d25.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.css" type="text/css" media="all" />
 </head>
