--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,4 +1,4 @@
-<div id="follow_form">
+<div id="follow_form_<%= "#{user.id}" %>">
   <% if user_signed_in? %>
     <% if current_user.following?(user) %>
       <%= render 'users/unfollow', user: user %>
